--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Time</title>
-    <link rel="stylesheet" href="(link unavailable)">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
-               <!-- <h1 class="text-center">Current Time</h1> -->
+                <h1 class="text-center">Current Time</h1>
                 <div id="clock" class="text-center"></div>
         </div>
     </div>
