--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <div class="row">
-                <h1 class="text-center">Current Time</h1>
+                
                 <div id="clock" class="text-center"></div>
+            <h1 class="text-center">FEW HOURS TO GO!!!</h1>
         </div>
     </div>
     <script src="script.js"></script>
